--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
+    <link rel="stylesheet" href="src/leaflet.css" />
+    <script src="src/leaflet-src.js"></script>
 
-	<script src="../src/Leaflet.gmxGrid.js"></script>
+	<script src="src/Leaflet.gmxGrid.js"></script>
     <style>
         html, body, #map {
             height: 100%;
