--- a/examples/Leaflet.gmxGrid.html
+++ b/examples/Leaflet.gmxGrid.html
@@ -10,6 +10,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
 
 	<script src="../src/Leaflet.gmxGrid.js"></script>
+	<script src="../src/Leaflet.gmxIndexGrid.js"></script>
     <style>
         html, body, #map {
             height: 100%;
@@ -111,5 +112,6 @@
 								});
 
 					</script>
+					<script src="app.js"></script>
 				</body>
 				</html>
